<resources>
    <string name="app_name">MY CARDS</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_personal">Cá nhân</string>
    <string name="title_cards">Trang chủ</string>
    <string name="title_search">Yêu thích</string>
    <string name="action_changePassword">Đổi mật khẩu</string>
    <string name="action_logout">Đăng xuất</string>


    <!--y copy-->
    <string name="prompt_password">Mật khẩu (lựa chọn)</string>
    <string name="action_sign_in">Đăng nhập  hoặc đăng ký</string>
    <string name="action_sign_in_short">Đăng ký</string>
    <string name="error_invalid_email">Email này không đúng</string>
    <string name="error_invalid_password">Mật khẩu quá ngắn</string>
    <string name="error_incorrect_password">Mật khẩu không đúng</string>
    <string name="error_field_required">Đây là trường bắt buộc</string>
    <string name="error_minimum_password">Mật khẩu phải có ít nhất 6 ký tự</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email">Email</string>

    <string name="auth_failed">Đăng nhập lỗi, hãy kiểm tra lại email, mật khẩu </string>
    <string name="change_email">Thay đổi email </string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_name">Tên người dùng </string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_link_to_register">Bạn chưa đăng ký? Ấn để đăng ký ngay!</string>
    <string name="btn_link_to_login">Đăng ký thành công.!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Quên mật khẩu?</string>
    <string name="btn_reset_password">Đặt lại mật khẩu</string>
    <string name="btn_back"><![CDATA[<< Trở lại]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Đăng xuất</string>
    <string name="lbl_forgot_password">Quên mật khẩu?</string>
    <string name="forgot_password_msg">Chúng tôi sẽ gửi hướng dẫn đặt lại mật khẩu vào Email đăng ký của bạn </string>
    <string name="enter_card_name">Tên thẻ</string>
    <string name="scan_card">Quét Thẻ</string>
    <string name="delete">Xóa</string>
    <string name="toast_empty_email">Nhập email đã đăng ký</string>
    <string name="scan_qr_code">Scan QRCode</string>
    <string name="history">Lịch sử</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wifi_changing_network">wifi changing network</string>
    <string name="button_wifi">wifi button</string>
    <string name="result_wifi">result wifi</string>

</resources>
