<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cards">
    <fragment
        android:id="@+id/navigation_personal"
        android:name="ss.projectt10.ui.personal.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />

    <fragment
        android:id="@+id/navigation_cards"
        android:name="ss.projectt10.ui.cards.CardsFragment"
        android:label="@string/title_cards"
        tools:layout="@layout/fragment_cards" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="ss.projectt10.ui.favorite.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="ss.projectt10.ui.history.historyFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_scan_qrcode"
        android:name="ss.projectt10.ui.scanQRCode.scanQRCode"
        android:label="@string/scan_qr_code"
        tools:layout="@layout/fragment_scan_qr_code" />



</navigation>
